--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile("c3p0:c3p0:0.9.1.2")
     compile('org.xerial:sqlite-jdbc:3.8.11.2')
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
     testCompile group: 'junit', name: 'junit', version: '4.12'
