--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.jsoup/jsoup
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
     compile("c3p0:c3p0:0.9.1.2")
     compile('org.xerial:sqlite-jdbc:3.8.11.2')
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
