--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     compile group: 'org.jsoup', name: 'jsoup', version: '1.9.2'
+    compile group: 'net.sf.json-lib', name: 'json-lib', version: '2.4',classifier:'jdk15'
     compile("c3p0:c3p0:0.9.1.2")
     compile('org.xerial:sqlite-jdbc:3.8.11.2')
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
