1、mysql+sqlite的jdbc链接，2、c3p0连接池，3、宝峰的配置文件工厂模式4、jsoup

--- a/res/param.properties
+++ b/res/param.properties
@@ -2,3 +2,4 @@ url=jdbc:mysql://172.16.248.4:6666/tmp?characterEncoding=utf-8&serverTimezone=UT
 user=root
 password=admin
 type=DBsql.tool.DBMysql
+aaa = 123123123
