--- a/src/main/resources/param1.properties
+++ b/src/main/resources/param1.properties
@@ -1,9 +1,9 @@
 #url=jdbc:mysql://172.16.248.4:6666/tmp?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 #user=root
 #password=admin
-#type=tool.DBMysql
+#type=DBsql.tool.DBMysql
 
 url=jdbc:sqlite:build/resources/main/sqliteDB.db3
 user=
 password=
-type=tool.DBSqlite
+type=DBsql.tool.DBSqlite
